[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uutils"
dynamic = ["version"]
description = "Useful utility classes and functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["uutils"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"
asyncio_mode = "auto"
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

